BonnMotion as mobility and README updates

--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -16,14 +16,14 @@ seed-1-mt = 128
 **.statistic-recording = true
 
 # network parameters
-**.numNodes = 50
+**.numNodes = ${55, 82}
 
 # all other layers are configured to default parameter values. Uncomment and change, if needed.
 # application layer (herald)
 **.application.usedRNG = 0
 **.application.dataGenerationInterval = 600s # every 10 minutes - we simulate for 1 day
 **.application.dataSizeInBytes = 10000
-**.application.ttl = 86400s
+**.application.ttl = 999999s # never expires
 
 # forwarding layer parameters
 **.forwarding.maximumCacheSize = 500000byte # 500 KB cache
@@ -37,18 +37,8 @@ seed-1-mt = 128
 **.wirelessIfc.bandwidthBitRate = 100000bps # 100 Kbps
 **.wirelessIfc.wirelessHeaderSize = 16byte # BT header
 
-# INET mobility parameters (RWP)
-**.constraintAreaMinX = 0m
-**.constraintAreaMinY = 0m
-**.constraintAreaMinZ = 0m
-**.constraintAreaMaxX = 500m
-**.constraintAreaMaxY = 500m
-**.constraintAreaMaxZ = 0m
-**.mobilityType = "RandomWaypointMobility"
-**.mobility.initFromDisplayString = false
-**.mobility.speed = 1.5mps
-**.mobility.waitTime = uniform(1800s, 3600s, 1)
-**.initialX = uniform(this.constraintAreaMinX, this.constraintAreaMaxX, 1)
-**.initialY = uniform(this.constraintAreaMinY, this.constraintAreaMaxY, 1)
-
+# INET mobility parameters (BonnMotion)
+**.mobilityType = "BonnMotionMobility"
+**.mobility.traceFile = "trace-slaw-01.movements"
+**.mobility.nodeId = -1  #means "host module's index"
 
