Epidemic RNG use fix

--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -7,8 +7,10 @@ repeat = 1
 
 # RNG initialization
 num-rngs = 4
-seed-0-mt = 128
-seed-1-mt = 128
+seed-0-mt = 128 # reserved for general use
+seed-1-mt = 128 # reserved for application
+seed-2-mt = 128 # reserved for forwarding
+seed-3-mt = 128 # reserved for mobility
 
 # statistic collection
 **.vector-recording = true
@@ -20,7 +22,7 @@ seed-1-mt = 128
 
 # all other layers are configured to default parameter values. Uncomment and change, if needed.
 # application layer (herald)
-**.application.usedRNG = 0
+**.application.usedRNG = 1
 **.application.dataGenerationInterval = 600s # every 10 minutes - we simulate for 1 day
 **.application.dataSizeInBytes = 10000
 **.application.ttl = 999999s # never expires
@@ -30,6 +32,7 @@ seed-1-mt = 128
 **.forwarding.antiEntropyInterval = 300s
 **.forwarding.maximumHopCount = 25
 **.forwarding.useTTL = false
+**.forwarding.usedRNG = 2
 
 # wireless interface parameters
 **.wirelessIfc.wirelessRange = 30m
