ini file has results file locations

--- a/simulations/omnetpp.ini
+++ b/simulations/omnetpp.ini
@@ -1,9 +1,11 @@
 [General]
 network = OPSLiteNetwork
 
+
 # simulation control parameters
 sim-time-limit = 86400s # 1 day
 repeat = 1
+
 
 # RNG initialization
 num-rngs = 4
@@ -12,13 +14,22 @@ seed-1-mt = 128 # reserved for application
 seed-2-mt = 128 # reserved for forwarding
 seed-3-mt = 128 # reserved for mobility
 
+
+# results location
+result-dir = results/
+output-vector-file = "${resultdir}/${datetime}_${inifile}-${configname}-${runnumber}.vec"
+output-scalar-file = "${resultdir}/${datetime}_${inifile}-${configname}-${runnumber}.sca"
+
+
 # statistic collection
 **.vector-recording = true
 **.scalar-recording = true
 **.statistic-recording = true
 
+
 # network parameters
 **.numNodes = ${55, 82}
+
 
 # all other layers are configured to default parameter values. Uncomment and change, if needed.
 # application layer (herald)
@@ -27,6 +38,7 @@ seed-3-mt = 128 # reserved for mobility
 **.application.dataSizeInBytes = 10000
 **.application.ttl = 999999s # never expires
 
+
 # forwarding layer parameters
 **.forwarding.maximumCacheSize = 500000byte # 500 KB cache
 **.forwarding.antiEntropyInterval = 300s
@@ -34,11 +46,13 @@ seed-3-mt = 128 # reserved for mobility
 **.forwarding.useTTL = false
 **.forwarding.usedRNG = 2
 
+
 # wireless interface parameters
 **.wirelessIfc.wirelessRange = 30m
 **.wirelessIfc.neighbourScanInterval = 1s
 **.wirelessIfc.bandwidthBitRate = 100000bps # 100 Kbps
 **.wirelessIfc.wirelessHeaderSize = 16byte # BT header
+
 
 # INET mobility parameters (BonnMotion)
 **.mobilityType = "BonnMotionMobility"
